@@ -1,5 +1,7 @@
 2006-05-07  David Reveman  <davidr@novell.com>
 
+	* plugins/compiz.schemas.in.in: Regen.
+
 	* plugins/switcher.c: Add icon support, minimized windows support
 	and allow switcher to show up when only one selectable window exist.
 
